--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
                 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="images/cover/cover-1.png" class="d-block img-fluid" alt="...">
+                            <img style="filter: brightness(60%);" src="images/cover/cover-1.png"
+                                class="d-block img-fluid" alt="...">
                             <div class="carousel-caption d-none d-sm-block">
                                 <h2>Welcome to Digital Learning</h2>
                                 <p>Learning facilitated by technology that gives students some element of control over
@@ -62,7 +63,8 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="images/cover/cover-2.jpg" class="d-block img-fluid" alt="...">
+                            <img style="filter: brightness(60%);" src="images/cover/cover-2.jpg"
+                                class="d-block img-fluid" alt="...">
                             <div class="carousel-caption d-none d-sm-block">
                                 <h2>Get Started Digital Learning</h2>
                                 <p>Learning facilitated by technology that gives students some element of control over
@@ -71,7 +73,8 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="images/cover/cover-3.jpg" class="d-block img-fluid" alt="...">
+                            <img style="filter: brightness(60%);" src="images/cover/cover-3.jpg"
+                                class="d-block img-fluid" alt="...">
                             <div class="carousel-caption d-none d-sm-block">
                                 <h2>Get Started Digital Learning</h2>
                                 <p>Learning facilitated by technology that gives students some element of control over
@@ -302,32 +305,40 @@
                         page when looking at its layout.</p>
                 </div>
                 <div class="row mt-5 mx-auto">
-                    <div class="col-12 col-sm-6 col-lg-3">
-                        <img class="img-fluid" src="images/student/student-1.png" alt="">
-                        <div class="p-2">
-                            <h5>Awlad Hossain</h5>
-                            <p>UIUX Designer</p>
+                    <div class="col-12 col-sm-6 col-lg-3 py-2">
+                        <div class="border rounded-2 px-0">
+                            <img class="img-fluid" src="images/student/student-1.png" alt="">
+                            <div class="p-2">
+                                <h5>Awlad Hossain</h5>
+                                <p>UIUX Designer</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-12 col-sm-6 col-lg-3">
-                        <img class="img-fluid" src="images/student/student-2.png" alt="">
-                        <div class="p-2">
-                            <h5>Awlad Hossain</h5>
-                            <p>UIUX Designer</p>
+                    <div class="col-12 col-sm-6 col-lg-3 py-2">
+                        <div class="border rounded-2 px-0">
+                            <img class="img-fluid" src="images/student/student-2.png" alt="">
+                            <div class="p-2">
+                                <h5>Awlad Hossain</h5>
+                                <p>UIUX Designer</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-12 col-sm-6 col-lg-3">
-                        <img class="img-fluid" src="images/student/student-3.png" alt="">
-                        <div class="p-2">
-                            <h5>Awlad Hossain</h5>
-                            <p>UIUX Designer</p>
+                    <div class="col-12 col-sm-6 col-lg-3 py-2">
+                        <div class="border rounded-2 px-0">
+                            <img class="img-fluid" src="images/student/student-3.png" alt="">
+                            <div class="p-2">
+                                <h5>Awlad Hossain</h5>
+                                <p>UIUX Designer</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-12 col-sm-6 col-lg-3">
-                        <img class="img-fluid" src="images/student/student-4.png" alt="">
-                        <div class="p-2">
-                            <h5>Awlad Hossain</h5>
-                            <p>UIUX Designer</p>
+                    <div class="col-12 col-sm-6 col-lg-3 py-2">
+                        <div class="border rounded-2 px-0">
+                            <img class="img-fluid" src="images/student/student-4.png" alt="">
+                            <div class="p-2">
+                                <h5>Awlad Hossain</h5>
+                                <p>UIUX Designer</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -340,7 +351,8 @@
             <div class="container my-5">
                 <div class="text-center">
                     <h2>Some Students Feedback</h2>
-                    <p>It is a long established fact that a reader will be distracted by the readable content of a page
+                    <p>It is a long established fact that a reader will be distracted by the readable <br
+                            class="d-none d-lg-block"> content of a page
                         when looking at its layout.</p>
                 </div>
                 <div class="row mt-5">
