--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
                         <div class="carousel-item active">
                             <img style="filter: brightness(60%);" src="images/cover/cover-1.png"
                                 class="d-block img-fluid" alt="...">
-                            <div class="carousel-caption d-none d-sm-block">
+                            <div class="carousel-caption">
                                 <h2>Welcome to Digital Learning</h2>
-                                <p>Learning facilitated by technology that gives students some element of control over
+                                <p class="d-none d-sm-block">Learning facilitated by technology that gives students
+                                    some element of control over
                                     time, place, path and pace.</p>
                                 <button class="btn btn-primary">Get Started</button>
                             </div>
@@ -65,9 +66,10 @@
                         <div class="carousel-item">
                             <img style="filter: brightness(60%);" src="images/cover/cover-2.jpg"
                                 class="d-block img-fluid" alt="...">
-                            <div class="carousel-caption d-none d-sm-block">
+                            <div class="carousel-caption">
                                 <h2>Get Started Digital Learning</h2>
-                                <p>Learning facilitated by technology that gives students some element of control over
+                                <p class="d-none d-sm-block">Learning facilitated by technology that gives students some
+                                    element of control over
                                     time, place, path and pace.</p>
                                 <button class="btn btn-primary">Get Started</button>
                             </div>
@@ -75,9 +77,10 @@
                         <div class="carousel-item">
                             <img style="filter: brightness(60%);" src="images/cover/cover-3.jpg"
                                 class="d-block img-fluid" alt="...">
-                            <div class="carousel-caption d-none d-sm-block">
+                            <div class="carousel-caption">
                                 <h2>Get Started Digital Learning</h2>
-                                <p>Learning facilitated by technology that gives students some element of control over
+                                <p class="d-none d-sm-block">Learning facilitated by technology that gives students some
+                                    element of control over
                                     time, place, path and pace.</p>
                                 <button class="btn btn-primary">Get Started</button>
                             </div>
@@ -211,21 +214,24 @@
                             <h2>Explore The elearning Institute</h2>
                             <p>Digital learning" is a learning method based on the use of new digital tools to enable
                                 learners to learn in a different way, whether it be face-to-face, distance learning
-                                (asynchronous or synchronous) or blended learning.... <span class="text-primary">See
-                                    More</span>
+                                (asynchronous or synchronous) or blended learning.
+                            <p class="d-none d-lg-block">Interactive and adaptive software allows students to learn in
+                                their own style, making learning personal and engaging.</p><span
+                                class="text-primary d-block d-lg-none">... See
+                                More</span>
                             </p>
                             <div class="row">
                                 <div class="col-6 col-md-4">
-                                    <h2 class="fs-sm-5">3.2K+</h2>
-                                    <p>Online Course</p>
-                                </div>
-                                <div class="col-6 col-md-4">
                                     <h2>3.2K+</h2>
                                     <p>Online Course</p>
                                 </div>
                                 <div class="col-6 col-md-4">
-                                    <h2>3.2K+</h2>
-                                    <p>Online Course</p>
+                                    <h2>600+</h2>
+                                    <p>Expert member</p>
+                                </div>
+                                <div class="col-6 col-md-4">
+                                    <h2>1K+</h2>
+                                    <p>Rating & Review</p>
                                 </div>
                             </div>
                             <button class="btn btn-primary">Read More</button>
@@ -538,7 +544,7 @@
             <div class="container text-center py-5">
                 <h3>Hero Edu</h3>
                 <p>Office 41, Zawaya Buildin, Ghala Muscat, Sultanate of Oman</p>
-                <p>Privacy Ploicy | Terms of use</p>
+                <p><a href="#" class="text-decoration-none text-light">Privacy Ploicy | Terms of use</a></p>
                 <div>
                     <a class="px-1" target="-blank" href="https://facebook.com"><i
                             class="fa fa-facebook rounded-5 bg-secondary bg-opacity-25 p-2 text-light"></i></a>
